--- a/style.css
+++ b/style.css
@@ -2,10 +2,35 @@ body{
     background-color: coral;
 }
 
-.container{
+.wrapper{
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container{
+    width: 350px;
+
+}
+
+.row{
+    /* margin-top: 5px; */
+    
+}
+
+.row .col{
+    /* margin: 5px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+input{
+    height: 70px;
+    width: 70px;
+    border: none;
+    margin: 3px 3px;
+    border-radius: 30px;
 }
