all buttons added

--- a/trail.css
+++ b/trail.css
@@ -11,29 +11,29 @@ body{
 }
 
 .container{
-    width: 450px;
+    width: 350px;
 
 }
-
-/* .row{
+/* 
+.row{
     margin-top: 5px;
+    
 } */
 
+
 .row .col{
-    /* margin: 5px; */
     display: flex;
     align-items: center;
     justify-content: center;
+    border: solid 1px black;
 }
 
 input{
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
     border: none;
-    margin: 3px 3px;
+    margin-top:3px;
+    margin-bottom:3px;
     border-radius: 20px;
 }
 
-#equal{
-    width: 148px;
-}
